# bgfx-shaderc

./: .gitignore  Cargo.toml  build.rs
bgfx/tools/shaderc/: shaderc.cpp
src/: lib.rs  main.rs
