[package]
license = "BSD-2-Clause"
authors = ["Jonathan Nilsson <lord.jonil@gmail.com>"]
categories = ["rendering::graphics-api"]
description = "low-level FFI bindings for bgfx shaderc"
name = "bgfx-shaderc"
version = "0.1.0"
edition = "2024"
build = "build.rs"

exclude = ["bgfx/bindings", "bgfx/examples"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
walkdir = "2"
